Version 0.XXXXX | Next Sunday AD | 0ceb06e

    API Changes/Compatibility Information:
     * New Widgets/Types
       - PackedGroup, PixelType, Preferences, ProgressBar, RadioButton,
           RadioItem, RadioLightButton, Rectangle (base class of all Widgets),
           RepeatButton, ReturnButton, Scrollbar, ScrollGroup, SecretInput
           (for passwords), ShapedWindow, Slider, Symbol (.*Image base class),
           Valuator, and xpmImage

    Resolved Issues/Bug Fixes:
     * ...see below

    Internal/Behavioral Changes:
     * The :default tag is no longer automatically exported

    Documentation/Sample Code/Test Suite:
     * Basic Rectangle tests
     * New example scripts for ProgressBar and xpmImage

    Notes:
     * The FLTK project is just getting started so now's a great time to join

Version 0.530 | 2009-10-05 00:42:52Z (Mon, 05 Oct 2009) | 3b70f43

    API Changes/Compatibility Information:
     * ...see below

    Resolved Issues/Bug Fixes:
     * ...see below

    Internal/Behavioral Changes:
     * It actually exists

    Documentation/Sample Code/Test Suite:
     * ...see above

    Notes:
     * The FLTK project is just getting started so now's a great time to join

_ -.-. .... .- -. --. . ... _________________________________________
For more information, see the commit log:
    http://github.com/sanko/fltk-perl/commits/master

$Ver$ from git $Rev$
$Date$
$Url$