@@ -1,0 +1,100 @@
+#ifndef DISABLE_FILE_CHOOSER
+
+MODULE = FLTK               PACKAGE = FLTK::file_chooser
+
+=pod
+
+=for license Artistic License 2.0 | Copyright (C) 2009 by Sanko Robinson
+
+=for author Sanko Robinson <sanko@cpan.org> - http://sankorobinson.com/
+
+=for version 0.531
+
+=for git $Id$
+
+=head1 NAME
+
+FLTK::file_chooser - File chooser widget for the Fast Light Tool Kit
+
+=head1 Description
+
+
+
+=begin apidoc
+
+=cut
+
+#include <fltk/file_chooser.h>
+
+MODULE = FLTK               PACKAGE = FLTK::file_chooser
+
+=for apidoc T[dialog,default]F||char * directory|dir_chooser|char * message|char * directory|int relative = 0|
+
+Show a file chooser dialog and pick a directory.
+
+Expected parameters include the C<$message> in the titlebar, the initially
+selected C<$directory>, and a boolean value which decides whether the returned
+value is relative (true) or absolute (false).
+
+=for apidoc T[dialog,default]F||char * file|file_chooser|char * message|char * pattern|char * filename|int relative = 0|
+
+Pops up the file chooser, waits for the user to pick a file or Cancel, and
+then returns that filename or undef if Cancel is chosen.
+
+C<$message> is a string used to title the window.
+
+C<$pattern> is used to limit the files listed in a directory to those matching
+the pattern. This matching is done by C<filename_match( )>. Use undef to show
+all files.
+
+C<$filename> is a default folder/filename to fill in the chooser with. If this
+ends with a '/' then this is a default folder and no file is preselected.
+
+If C<$filename> is undef, then the last filename that was choosen is used,
+unless the C<$pattern> changes, in which case only the last directory is used.
+The first time the file chooser is called this defaults to a blank string.
+
+The returned value points at a static buffer that is only good until the next
+time the L<C<file_chooser( )>|FLTK::file_chooser/"dialog"> is called.
+
+=cut
+
+MODULE = FLTK               PACKAGE = FLTK
+
+const char *
+dir_chooser( char * message, char * directory, int relative = 0 )
+
+BOOT:
+    export_tag("dir_chooser", "dialog");
+    export_tag("dir_chooser", "default");
+
+const char *
+file_chooser( char * message, char * pattern, char * filename, int relative = 0 )
+
+BOOT:
+    export_tag("alert", "dialog"); // TODO: rename file_chooser tag dialog
+    export_tag("alert", "default");
+
+MODULE = FLTK               PACKAGE = FLTK::file_chooser
+
+=for apidoc T[dialog]F|||file_chooser_callback|CV * coderef|
+
+This function is called every time the user navigates to a new file or
+directory in the file chooser. It can be used to preview the result in the
+main window.
+
+=cut
+
+MODULE = FLTK               PACKAGE = FLTK
+
+void
+file_chooser_callback( CV * coderef )
+    CODE:
+        file_chooser_cb = newSVsv( ST( 0 ) );
+        fltk::file_chooser_callback(_cb_f);
+
+BOOT:
+    export_tag("file_chooser_callback", "dialog");
+    export_tag("file_chooser_callback", "default");
+
+#endif // ifndef DISABLE_FILE_CHOOSER
